Tests: made paredit.clj a true bundle, and now everything works as expected!